<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.example.automaticvideodirector.ui.EditTextPreferenceWithSummary 
        android:defaultValue="155.134.92.184" 
        android:enabled="true" 
        android:key="server_address" 
        android:title="@string/server_address"/>
    <com.example.automaticvideodirector.ui.EditTextPreferenceWithSummary 
        android:defaultValue="1234" 
        android:key="server_port" 
        android:title="@string/server_port" 
        android:enabled="true"/>
    <com.example.automaticvideodirector.ui.EditTextPreferenceWithSummary 
        android:defaultValue="111" 
        android:key="event" 
        android:title="@string/event" 
        android:enabled="true"/>
</PreferenceScreen>