<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:background="#03a9f4"
        android:text="@+string/welcome"
        android:textSize="30sp"
        android:textColor="#fff" />

    <Button
        android:id="@+id/button_isConnected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/textView_welcome"
        android:text="@string/button_is_connected" />

    <Button
        android:id="@+id/button_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/button_isConnected"
        android:text="@string/button_record_and_share" />
    
    <Button
        android:id="@+id/button_http_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/button_isConnected"
        android:onClick="sendHttpGet"
        android:text="@string/button_http_get" />
    
    <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView_welcome"
        android:onClick="launchSettings"
        android:text="@string/button_settings"
    />

<!-- 	<LinearLayout
	    android:id="@+id/file_selection_linear"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/button_record"
	    android:orientation="horizontal" >

        <EditText
            android:id="@+id/select_file"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/select_file" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="pickFile"
            android:text="@string/button_browse" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendFile"
            android:text="@string/button_send" />
    </LinearLayout> -->
    
<!--     <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/file_selection_linear"
        android:onClick="launchSettings"
        android:text="@string/button_settings"
    /> -->
    
<!--     <Button
        android:id="@+id/button_try_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/file_selection_linear"
        android:layout_toRightOf="@id/button_settings"
        android:layout_toEndOf="@id/button_settings"
        android:onClick="tryUpload"
        android:text="@string/button_try_upload"
    /> -->
    
</RelativeLayout>